# speckle_automate_python_example

./: .env.example  .gitignore  Dockerfile  README.md  automate_function.py  automate_sdk.py  example.function_inputs.json  flatten.py  main.py  make_comment.py  obj_res.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema_generation.py  speckle_project_data.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
tests/: __init__.py  test_function.py
